# gitbin

./: .gitignore  README.md  half_tree.md  new.txt  review.md
cmaketest/: cmaketest.txt  解释.txt
cmaketest/11111/: 3.cpp  CMakeLists.txt
cmaketest/222/: CMakeLists.txt  hello.cpp  main.cpp
cmaketest/321/: 321中尝试cmake.txt  ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  app.vcxproj  app.vcxproj.filters  cmake_install.cmake  noj3.cpp  test.sln
cmaketest/333/: 333中尝试.txt
cmaketest/345/: CMakeLists.txt
cmaketest/444/: CMakeLists.txt
cmaketest/asd/: Makefile  main.cpp  myheader.h  在asd尝试cmake.txt
cmaketest/cgg/: abcdefg.h  hello.cpp  hello.d
cmaketest/ddl/: A.cpp  B.h.in  CMakeLists.txt  嘎嘎报错.txt
cmaketest/ddl.primary/: CMakeLists.txt
cmaketest/double/: CMakeLists.txt
cmaketest/f/: a.c  a.d
cmaketest/new/: abcdefg.h  hello.cpp  main.cpp
constexpr/: self.cpp
new_people_learn/: LIFEISSOHARD.txt  test.cpp
new_people_learn/auto/: auto.md
new_people_learn/constexpr/: if_constexpr.cpp
new_people_learn/define/: count_define.cpp  oper_define.cpp
new_people_learn/moreclass/: any.cpp  optional.cpp  string_view.cpp
new_people_learn/va_args/: sum.cpp
new_people_learn/void[]/: change_one.cpp
range_for/: say.md  self.cpp
struct_link/: init.cpp  pair_try.cpp
va_args/: sum.cpp  va args.cpp  va_args g.cpp  vprintf.cpp
void[]/: change_second.cpp  double_func_pointer.cpp
work/cmake/: CMakeLists.txt  description.md  tutorial.cpp  work.txt
work/cmake/work/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cpp
(+10 files in other folders)
